operators/strimzi-kafka-operator/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: strimzi-cluster-operator-system
